<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:src="@drawable/ic_car" />

    <TextView
        android:id="@+id/txtVehicleBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editVehicleBrand"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="31dp"
        android:text="@string/brand" />

    <EditText
        android:id="@+id/editVehicleBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgCar"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/txtVehicleBrand"
        android:ems="10"
        android:text="@string/exampleBrand" />

    <TextView
        android:id="@+id/txtVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_below="@+id/txtVehicleBrand"
        android:layout_marginTop="31dp"
        android:text="@string/model" />

    <EditText
        android:id="@+id/editVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtVehicleModel"
        android:layout_alignLeft="@+id/editVehicleBrand"
        android:ems="10"
        android:text="@string/exampleModel" />

    <TextView
        android:id="@+id/txtTankSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleModel"
        android:layout_below="@+id/txtVehicleModel"
        android:layout_marginTop="48dp"
        android:text="@string/tankSize" />

    <EditText
        android:id="@+id/editTankSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTankSize"
        android:layout_alignLeft="@+id/editVehicleModel"
        android:ems="10"
        android:text="@string/exampleTankSize" />

    <CheckBox
        android:id="@+id/chcPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:layout_alignLeft="@+id/txtVehicleName"
        android:layout_marginRight="30dp"
        android:text="@string/primary" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="30dp"
        android:onClick="btnSubmit"
        android:text="@string/submit" />

</RelativeLayout>